--- a/app/src/main/res/layout/activity_nombre.xml
+++ b/app/src/main/res/layout/activity_nombre.xml
@@ -50,8 +50,8 @@
         android:layout_marginTop="92dp"
         android:layout_marginEnd="50dp"
         android:ems="10"
+        android:hint="nombre"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
