--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -23,10 +23,10 @@
         android:id="@+id/nombrefinal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
         android:layout_marginTop="208dp"
         android:text="hola pepito"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
